Update context menu labels for multiselected tabs

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -79,16 +79,21 @@
                    https://bugzilla.mozilla.org/show_bug.cgi?id=1396031 -->
     <ul id="tabContextMenu">
       <li id="context_reloadTab" class="require-context-tab"
-          title="__MSG_tabContextMenu_reload_label__">__MSG_tabContextMenu_reload_label__</li>
+          data-label-single="__MSG_tabContextMenu_reload_label__"
+          data-label-multiselected="__MSG_tabContextMenu_reload_label_multiselected__"></li>
       <li id="context_toggleMuteTab-mute" class="require-context-tab"
-          title="__MSG_tabContextMenu_mute_label__">__MSG_tabContextMenu_mute_label__</li>
+          data-label-single="__MSG_tabContextMenu_mute_label__"
+          data-label-multiselected="__MSG_tabContextMenu_mute_label_multiselected__"></li>
       <li id="context_toggleMuteTab-unmute" class="require-context-tab"
-          title="__MSG_tabContextMenu_unmute_label__">__MSG_tabContextMenu_unmute_label__</li>
+          data-label-single="__MSG_tabContextMenu_unmute_label__"
+          data-label-multiselected="__MSG_tabContextMenu_multiselected__"></li>
       <li class="separator require-context-tab"></li>
       <li id="context_pinTab" class="require-context-tab"
-          title="__MSG_tabContextMenu_pin_label__">__MSG_tabContextMenu_pin_label__</li>
+          data-label-single="__MSG_tabContextMenu_pin_label__"
+          data-label-multiselected="__MSG_tabContextMenu_pin_multiselected__"></li>
       <li id="context_unpinTab" class="require-context-tab"
-          title="__MSG_tabContextMenu_unpin_label__">__MSG_tabContextMenu_unpin_label__</li>
+          data-label-single="__MSG_tabContextMenu_unpin_label__"
+          data-label-multiselected="__MSG_tabContextMenu_unpin_label_multiselected__"></li>
       <li id="context_duplicateTab" class="require-context-tab"
           title="__MSG_tabContextMenu_duplicate_label__">__MSG_tabContextMenu_duplicate_label__</li>
       <li id="context_openTabInWindow" class="require-context-tab require-multiple-tabs"
@@ -97,7 +102,8 @@
       <li id="context_reloadAllTabs" class="require-multiple-tabs"
           title="__MSG_tabContextMenu_reloadAll_label__">__MSG_tabContextMenu_reloadAll_label__</li>
       <li id="context_bookmarkAllTabs" class="require-normal-tabs"
-          title="__MSG_tabContextMenu_bookmarkAll_label__">__MSG_tabContextMenu_bookmarkAll_label__</li>
+          data-label-single="__MSG_tabContextMenu_bookmarkAll_label__"
+          data-label-multiselected="__MSG_tabContextMenu_bookmark_multiselected__"></li>
       <li id="context_closeTabsToTheEnd" class="require-context-tab require-multiple-normal-tabs"
           title="__MSG_tabContextMenu_closeAfter_label__">__MSG_tabContextMenu_closeAfter_label__</li>
       <li id="context_closeOtherTabs" class="require-context-tab require-multiple-normal-tabs"
@@ -106,7 +112,8 @@
       <li id="context_undoCloseTab"
           title="__MSG_tabContextMenu_undoClose_label__">__MSG_tabContextMenu_undoClose_label__</li>
       <li id="context_closeTab" class="require-context-tab"
-          title="__MSG_tabContextMenu_close_label__">__MSG_tabContextMenu_close_label__</li>
+          data-label-single="__MSG_tabContextMenu_close_label__"
+          data-label-multiselected="__MSG_tabContextMenu_close_label_multiselected__"></li>
     </ul>
   </body>
 </html>
