Add "Reopen in Container" menu (but doesn't work yet)

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -96,6 +96,13 @@
           data-label-multiselected="__MSG_tabContextMenu_unpin_label_multiselected__"></li>
       <li id="context_duplicateTab" class="require-context-tab"
           title="__MSG_tabContextMenu_duplicate_label__">__MSG_tabContextMenu_duplicate_label__</li>
+      <li id="context_reopenInContainer" class="require-context-tab"
+          title="__MSG_tabContextMenu_reopenInContainer_label__">__MSG_tabContextMenu_reopenInContainer_label__
+        <ul id="contextual-identities-selector-context">
+          <li title="__MSG_tabContextMenu_reopenInContainer_noContainer_label__">__MSG_tabContextMenu_reopenInContainer_noContainer_label__</li>
+          <li class="separator"></li>
+        </ul>
+      </li>
       <li id="context_openTabInWindow" class="require-context-tab require-multiple-tabs"
           title="__MSG_tabContextMenu_tearOff_label__">__MSG_tabContextMenu_tearOff_label__</li>
       <li class="separator require-context-tab"></li>
