Hide needless items

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -99,8 +99,8 @@
       <li id="context_reopenInContainer" class="require-context-tab"
           title="__MSG_tabContextMenu_reopenInContainer_label__">__MSG_tabContextMenu_reopenInContainer_label__
         <ul id="contextual-identities-selector-context">
-          <li title="__MSG_tabContextMenu_reopenInContainer_noContainer_label__">__MSG_tabContextMenu_reopenInContainer_noContainer_label__</li>
-          <li class="separator"></li>
+          <li class="contextual-identity-default" title="__MSG_tabContextMenu_reopenInContainer_noContainer_label__">__MSG_tabContextMenu_reopenInContainer_noContainer_label__</li>
+          <li class="contextual-identity-default separator"></li>
         </ul>
       </li>
       <li id="context_openTabInWindow" class="require-context-tab require-multiple-tabs"
