Implement "Open in Container"

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -99,7 +99,10 @@
       <li id="context_reopenInContainer" class="require-context-tab"
           title="__MSG_tabContextMenu_reopenInContainer_label__">__MSG_tabContextMenu_reopenInContainer_label__
         <ul id="contextual-identities-selector-context">
-          <li class="contextual-identity-default" title="__MSG_tabContextMenu_reopenInContainer_noContainer_label__">__MSG_tabContextMenu_reopenInContainer_noContainer_label__</li>
+          <li id="context_reopenInContainer:firefox-default"
+              class="contextual-identity-default"
+              data-value="firefox-default"
+              title="__MSG_tabContextMenu_reopenInContainer_noContainer_label__">__MSG_tabContextMenu_reopenInContainer_noContainer_label__</li>
           <li class="contextual-identity-default separator"></li>
         </ul>
       </li>
