Add ability to control logs for multiselection

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -464,6 +464,7 @@
             <p><label><input id="logFor-background/handle-new-tabs" type="checkbox">background/handle-new-tabs</label></p>
             <p><label><input id="logFor-background/handle-removed-tabs" type="checkbox">background/handle-removed-tabs</label></p>
             <p><label><input id="logFor-background/handle-tab-focus" type="checkbox">background/handle-tab-focus</label></p>
+            <p><label><input id="logFor-background/handle-tab-multiselect" type="checkbox">background/handle-tab-multiselect</label></p>
             <p><label><input id="logFor-background/handle-tree-changes" type="checkbox">background/handle-tree-changes</label></p>
             <p><label><input id="logFor-background/tab-context-menu" type="checkbox">background/tab-context-menu</label></p>
             <p><label><input id="logFor-background/tree-structure" type="checkbox">background/tree-structure</label></p>
