Allow to tear off dragged ttree from window by default.
Shift-drag allows to create links or bookmarks from dragged tree.
This commit also introduces a new configuration to invert behaviors for regular drag and shift-drag.

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -349,6 +349,17 @@
               __MSG_config_parentTabBehaviorForChanges_onlyInSidebar__</label></li>
       </ul>
     </fieldset>
+    <fieldset>
+      <legend>__MSG_config_allowBookmarkCreationFromDraggedTree_caption__</legend>
+      <ul>
+        <li><label><input type="radio"
+                          name="allowBookmarkCreationFromDraggedTree" value="false">
+              __MSG_config_allowBookmarkCreationFromDraggedTree_false__</label></li>
+        <li><label><input type="radio"
+                          name="allowBookmarkCreationFromDraggedTree" value="true">
+              __MSG_config_allowBookmarkCreationFromDraggedTree_true__</label></li>
+      </ul>
+    </fieldset>
     </section>
 
 
