--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -61,9 +61,7 @@
       <span id="dummy-favicon-size-box"></span>
       <span id="dummy-highlight-color-box"></span>
       <li id="dummy-tab" class="tab">
-        <span class="favicon">
-          <span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span>
-        </span>
+        <span class="favicon"><span class="throbber" id="master-throbber-container"><span id="master-throbber"></span></span></span>
         <span class="label">-</span>
         <span class="counter">0</span>
         <span class="closebox"></button>
