Add ability to override context menu in the sidebar

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -110,6 +110,9 @@
 
     <section id="section-contextMenu">
     <h1>__MSG_config_context_caption__</h1>
+    <p><label><input id="menusOverrideContextPermissionGranted"
+                     type="checkbox">
+              __MSG_config_requestPermissions_menusOverrideContext__</label></p>
     <p><label><input id="fakeContextMenu"
                      type="checkbox">
               __MSG_config_fakeContextMenu_label__</label></p>
