--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -108,6 +108,10 @@
 <p>__MSG_message_startup_requestPermissions_description__</p>
 <div class="permissions">
   <p class="checkbox">
+    <label><input id="menusOverrideContextPermissionGranted"
+                  type="checkbox">
+           __MSG_message_startup_requestPermissions_menusOverrideContext__</label></p>
+  <p class="checkbox">
     <label><input id="bookmarksPermissionGranted"
                   type="checkbox">
            __MSG_message_startup_requestPermissions_bookmarks__</label></p>
