Add "Reset All Shortcuts" button

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -368,6 +368,7 @@
 
     <section id="section-shortcuts">
     <h1>__MSG_config_shortcuts_caption__</h1>
+    <p><button id="shortcutsResetAll">__MSG_config_shortcuts_resetAll__</button></p>
     <div id="shortcuts"></div>
     </section>
 
