Use icons for tab drag handle #2033

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -59,19 +59,19 @@
     <div id="tab-drag-handle">
       <span id="tab-drag-handle-tree-tearoff"
             draggable="true"
-            title="__MSG_tabDragHandle_tree_tearoff_tooltip__">A</span>
+            title="__MSG_tabDragHandle_tree_tearoff_tooltip__"></span>
       <span id="tab-drag-handle-tree-bookmark"
             draggable="true"
             class="allowBookmark"
-            title="__MSG_tabDragHandle_tree_bookmark_tooltip__">B</span>
+            title="__MSG_tabDragHandle_tree_bookmark_tooltip__"></span>
       <span id="tab-drag-handle-tab-tearoff"
             draggable="true"
             class="shouldIgnoreDescendants"
-            title="__MSG_tabDragHandle_tab_tearoff_tooltip__">C</span>
+            title="__MSG_tabDragHandle_tab_tearoff_tooltip__"></span>
       <span id="tab-drag-handle-tab-bookmark"
             draggable="true"
             class="allowBookmark shouldIgnoreDescendants"
-            title="__MSG_tabDragHandle_tab_bookmark_tooltip__">D</span>
+            title="__MSG_tabDragHandle_tab_bookmark_tooltip__"></span>
     </div>
     <div id="background"></div><!-- This is required to hide dummy elements without offscreen rendering outside of the viewport. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 -->
     <ul id="dummy-tabs">
