Add configuration to control tab drag handle

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -362,6 +362,9 @@
                           name="allowBookmarkCreationFromDraggedTree" value="true">
               __MSG_config_allowBookmarkCreationFromDraggedTree_true__</label></li>
       </ul>
+      <p><label><input id="showTabDragHandle"
+                       type="checkbox">
+               __MSG_config_showTabDragHandle_label__</label></p>
     </fieldset>
     </section>
 
