Add closebox to tab drag handles

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -57,6 +57,8 @@
     <div class="tab-drop-blocker" id="tab-drop-blocker-bottom"></div>
     <div class="tab-drop-blocker" id="tab-drop-blocker-left"></div>
     <div id="tab-drag-handle">
+      <span id="tab-drag-handle-close"
+            title="__MSG_tabDragHandle_close_tooltip__"></span>
       <span id="tab-drag-handle-tree-tearoff"
             draggable="true"
             title="__MSG_tabDragHandle_tree_tearoff_tooltip__"></span>
