Add ability to control logs for tab drag handle

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -502,6 +502,7 @@
             <p><label><input id="logFor-sidebar/sidebar" type="checkbox">sidebar/sidebar</label></p>
             <p><label><input id="logFor-sidebar/size" type="checkbox">sidebar/size</label></p>
             <p><label><input id="logFor-sidebar/tab-context-menu" type="checkbox">sidebar/tab-context-menu</label></p>
+            <p><label><input id="logFor-sidebar/tab-drag-handle" type="checkbox">sidebar/tab-drag-handle</label></p>
         </fieldset>
       </fieldset>
       <p><label><input id="simulateSVGContextFill"
