Add new options section for drag and drop

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -352,6 +352,11 @@
               __MSG_config_parentTabBehaviorForChanges_onlyInSidebar__</label></li>
       </ul>
     </fieldset>
+    </section>
+
+
+    <section id="section-drag">
+    <h1>__MSG_config_drag_caption__</h1>
     <fieldset>
       <legend>__MSG_config_tabDragBehavior_caption__</legend>
       <p><label>__MSG_config_tabDragBehavior_label__</label>
@@ -372,18 +377,6 @@
                        type="checkbox">
                __MSG_config_showTabDragHandle_label__</label></p>
     </fieldset>
-    </section>
-
-
-    <section id="section-shortcuts">
-    <h1>__MSG_config_shortcuts_caption__</h1>
-    <p><button id="shortcutsResetAll">__MSG_config_shortcuts_resetAll__</button></p>
-    <div id="shortcuts"></div>
-    </section>
-
-
-    <section id="section-advanced">
-    <h1>__MSG_config_advanced_caption__</h1>
     <fieldset>
       <legend>__MSG_config_dropLinksOnTabBehavior_caption__</legend>
       <ul>
@@ -398,6 +391,18 @@
               __MSG_config_dropLinksOnTabBehavior_newtab__</label></li>
       </ul>
     </fieldset>
+    </section>
+
+
+    <section id="section-shortcuts">
+    <h1>__MSG_config_shortcuts_caption__</h1>
+    <p><button id="shortcutsResetAll">__MSG_config_shortcuts_resetAll__</button></p>
+    <div id="shortcuts"></div>
+    </section>
+
+
+    <section id="section-advanced">
+    <h1>__MSG_config_advanced_caption__</h1>
     <p><label><input id="warnOnCloseTabs"
                      type="checkbox">
               __MSG_config_warnOnCloseTabs_label__</label></p>
