Add links to open special pages

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -413,7 +413,7 @@
     <fieldset>
       <legend>__MSG_config_userStyleRules_label__</legend>
       <p>__MSG_config_userStyleRules_description_before__
-         <a href="__MSG_config_userStyleRules_description_link_uri__">__MSG_config_userStyleRules_description_link_label__</a>
+         <a href="__MSG_config_userStyleRules_description_link_uri__" target="_blank">__MSG_config_userStyleRules_description_link_label__</a>
          __MSG_config_userStyleRules_description_after__</p>
       <textarea id="userStyleRules"
                 rows="10"
@@ -437,7 +437,7 @@
     <fieldset id="group-importedTreeStructureFromLegacy" class="collapsible collapsed">
       <legend>__MSG_config_importedTreeStructureFromLegacy_label__</legend>
       <p>__MSG_config_migrateSessionStore_before__
-         <a href="__MSG_migrateSessions_link_uri__">__MSG_config_migrateSessionStore_link_label__</a>
+         <a href="__MSG_migrateSessions_link_uri__" target="_blank">__MSG_config_migrateSessionStore_link_label__</a>
          __MSG_config_migrateSessionStore_after__</p>
       <p><label><input id="migrateLegacyTreeStructure"
                        type="checkbox">
@@ -453,6 +453,10 @@
 
     <section id="section-debug">
     <h1>__MSG_config_debug_caption__</h1>
+    <ul>
+      <li><a id="link-startupPage" target="_blank">__MSG_config_link_startupPage_label__</a></li>
+      <li><a id="link-groupPage" target="_blank">__MSG_config_link_groupPage_label__</a></li>
+    </ul>
     <p><label><input id="debug"
                      type="checkbox">
              __MSG_config_debug_label__</label></p>
