--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -158,6 +158,9 @@
                                  style="width: 100%">
                           __MSG_config_bookmarkTreeFolderName_after__</label></p>
     <p class="sub">__MSG_config_bookmarkTreeFolderName_description__</p>
+    <p class="sub"><label>__MSG_config_defaultBookmarkParentId_label_before__
+                          <button id="defaultBookmarkParentChooser"></button>
+                          __MSG_config_defaultBookmarkParentId_label_after__</label></p>
     </div>
     </fieldset>
     </section>
