Search dropped non-URL text by default search engine #1527

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -394,6 +394,9 @@
               __MSG_config_dropLinksOnTabBehavior_newtab__</label></li>
       </ul>
     </fieldset>
+    <p><label><input id="searchPermissionGranted"
+                     type="checkbox">
+              __MSG_config_requestPermissions_search__</label></p>
     </section>
 
 
