--- a/webextensions/resources/startup.html
+++ b/webextensions/resources/startup.html
@@ -119,6 +119,10 @@
     <label><input id="allUrlsPermissionGranted"
                   type="checkbox">
            __MSG_message_startup_requestPermissions_allUrls__</label></p>
+  <p class="checkbox">
+    <label><input id="searchPermissionGranted"
+                  type="checkbox">
+           __MSG_message_startup_requestPermissions_search__</label></p>
 </div>
 
 <div class="user-chrome-css">
