Show notification message while dragging #2055

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -73,6 +73,7 @@
             class="allowBookmark shouldIgnoreDescendants"
             title="__MSG_tabDragHandle_tab_bookmark_tooltip__"></span>
     </div>
+    <div id="tab-drag-notification"><span></span></div>
     <div id="background"></div><!-- This is required to hide dummy elements without offscreen rendering outside of the viewport. See also: https://github.com/piroor/treestyletab/issues/1703#issuecomment-354646405 -->
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
