Add configuration UI to control drag notification

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -376,6 +376,9 @@
       <p><label><input id="showTabDragHandle"
                        type="checkbox">
                __MSG_config_showTabDragHandle_label__</label></p>
+      <p><label><input id="showTabDragBehaviorNotification"
+                       type="checkbox">
+               __MSG_config_showTabDragBehaviorNotification_label__</label></p>
     </fieldset>
     <fieldset>
       <legend>__MSG_config_dropLinksOnTabBehavior_caption__</legend>
