Use context-fill version icon only when it is activated #2053

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -105,6 +105,9 @@
     <p><label><input id="showCollapsedDescendantsByTooltip"
                      type="checkbox">
              __MSG_config_showCollapsedDescendantsByTooltip_label__</label></p>
+    <p><label><input id="applyThemeColorToIcon"
+                     type="checkbox">
+             __MSG_config_applyThemeColorToIcon_label__</label></p>
 
     </section>
 
