Add "close tree" related items to "Close Tabs Options" submenu also

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -119,6 +119,16 @@
     <fieldset>
     <legend>__MSG_config_extraItems_caption__</legend>
     <div id="contextConfigs">
+    <p><label><input id="context_closeTabOptions_closeTree"
+                     type="checkbox">
+              __MSG_tabContextMenu_closeTabOptions_label__ / __MSG_context_closeTree_label__</label></p>
+    <p><label><input id="context_closeTabOptions_closeDescendants"
+                     type="checkbox">
+              __MSG_tabContextMenu_closeTabOptions_label__ / __MSG_context_closeDescendants_label__</label></p>
+    <p><label><input id="context_closeTabOptions_closeTree"
+                     type="checkbox">
+              __MSG_tabContextMenu_closeTabOptions_label__ / __MSG_context_closeOthers_label__</label></p>
+    <hr>
     <p><label><input id="context_reloadTree"
                      type="checkbox">
               __MSG_context_reloadTree_label__</label></p>
