Add ability to change settings of TST from the context menu on the toolbar button

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -62,7 +62,8 @@
               __MSG_config_style_highcontrast__</label></li>
         <li><label><input type="radio"
                           name="style" value="none">
-              __MSG_config_style_none__</label></li>
+              __MSG_config_style_none__
+              __MSG_config_style_none_info__</label></li>
       </ul>
     </fieldset>
     <p>__MSG_config_scrollbarMode_caption__
@@ -107,7 +108,8 @@
              __MSG_config_showCollapsedDescendantsByTooltip_label__</label></p>
     <p><label><input id="applyThemeColorToIcon"
                      type="checkbox">
-             __MSG_config_applyThemeColorToIcon_label__</label></p>
+             __MSG_config_applyThemeColorToIcon_label__
+             __MSG_config_applyThemeColorToIcon_label_info__</label></p>
 
     </section>
 
@@ -506,6 +508,7 @@
           <legend><label><input id="logFor-background" type="checkbox">__MSG_config_logFor_background__</label></legend>
             <p><label><input id="logFor-background/background-cache" type="checkbox">background/background-cache</label></p>
             <p><label><input id="logFor-background/background" type="checkbox">background/background</label></p>
+            <p><label><input id="logFor-background/browser-action-menu" type="checkbox">background/browser-action-menu</label></p>
             <p><label><input id="logFor-background/context-menu" type="checkbox">background/context-menu</label></p>
             <p><label><input id="logFor-background/handle-group-tabs" type="checkbox">background/handle-group-tabs</label></p>
             <p><label><input id="logFor-background/handle-misc" type="checkbox">background/handle-misc</label></p>
