--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -123,13 +123,16 @@
     <div id="contextConfigs">
     <p><label><input id="context_closeTabOptions_closeTree"
                      type="checkbox">
-              __MSG_tabContextMenu_closeTabOptions_label__ / __MSG_context_closeTree_label__</label></p>
+              __MSG_context_topLevel_prefix__
+              __MSG_context_closeTree_label__</label></p>
     <p><label><input id="context_closeTabOptions_closeDescendants"
                      type="checkbox">
-              __MSG_tabContextMenu_closeTabOptions_label__ / __MSG_context_closeDescendants_label__</label></p>
+              __MSG_context_topLevel_prefix__
+              __MSG_context_closeDescendants_label__</label></p>
     <p><label><input id="context_closeTabOptions_closeOthers"
                      type="checkbox">
-              __MSG_tabContextMenu_closeTabOptions_label__ / __MSG_context_closeOthers_label__</label></p>
+              __MSG_context_topLevel_prefix__
+              __MSG_context_closeOthers_label__</label></p>
     <hr>
     <p><label><input id="context_reloadTree"
                      type="checkbox">
