Add configuration UI for simulation of browser.tabs.selectOwnerOnClose

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -330,7 +330,11 @@
                           name="moveFocusInTreeForClosedCurrentTab" value="false">
               __MSG_config_moveFocusInTreeForClosedCurrentTab_false__</label></li>
       </ul>
-      <p>__MSG_config_moveFocusInTreeForClosedCurrentTab_description__</p>
+      <p class="without-successor-tab-support">__MSG_config_moveFocusInTreeForClosedCurrentTab_description__</p>
+      <p class="with-successor-tab-support">
+        <label><input id="simulateSelectOwnerOnClose"
+                      type="checkbox">
+               __MSG_config_simulateSelectOwnerOnClose_label__</label></p>
     </fieldset>
     <fieldset>
       <legend>__MSG_config_closeParentBehavior_caption__</legend>
