Add "group selected tabs" feature (moved from Multiple Tab Handler)

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -176,6 +176,9 @@
     <p class="sub"><label>__MSG_config_defaultBookmarkParentId_label_before__
                           <button id="defaultBookmarkParentChooser"></button>
                           __MSG_config_defaultBookmarkParentId_label_after__</label></p>
+    <p><label><input id="context_groupTabs"
+                     type="checkbox">
+              __MSG_context_groupTabs_label__</label></p>
     </div>
     </fieldset>
     </section>
