--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -438,6 +438,9 @@
                      type="checkbox">
              __MSG_config_useCachedTree_label__</label></p>
     <p class="sub">__MSG_config_useCachedTree_description__</p>
+    <p><label><input id="simulateCloseTabByDblclick"
+                     type="checkbox">
+              __MSG_config_simulateCloseTabByDblclick_label__</label></p>
     <fieldset>
       <legend>__MSG_config_userStyleRules_label__</legend>
       <p>__MSG_config_userStyleRules_description_before__
