Follow to change of migrated config name

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -115,9 +115,9 @@
 
     <section id="section-contextMenu">
     <h1>__MSG_config_context_caption__</h1>
-    <p><label><input id="fakeContextMenu"
+    <p><label><input id="emulateDefaultContextMenu"
                      type="checkbox">
-              __MSG_config_fakeContextMenu_label__</label></p>
+              __MSG_config_emulateDefaultContextMenu_label__</label></p>
     <fieldset>
     <legend>__MSG_config_extraItems_caption__</legend>
     <div id="contextConfigs">
