--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -167,13 +167,13 @@
     <p class="sub"><label><input id="bookmarksPermissionGranted"
                                  type="checkbox">
                           __MSG_config_requestPermissions_bookmarks__</label></p>
-    <p class="sub"><label>__MSG_config_bookmarkTreeFolderName_before__
+    <p class="sub with-bookmarks-permission"><label>__MSG_config_bookmarkTreeFolderName_before__
                           <input id="bookmarkTreeFolderName"
                                  type="text"
                                  style="width: 100%">
                           __MSG_config_bookmarkTreeFolderName_after__</label></p>
-    <p class="sub">__MSG_config_bookmarkTreeFolderName_description__</p>
-    <p class="sub"><label>__MSG_config_defaultBookmarkParentId_label_before__
+    <p class="sub with-bookmarks-permission"><label for="bookmarkTreeFolderName">__MSG_config_bookmarkTreeFolderName_description__</label></p>
+    <p class="sub with-bookmarks-permission"><label>__MSG_config_defaultBookmarkParentId_label_before__
                           <button id="defaultBookmarkParentChooser"></button>
                           __MSG_config_defaultBookmarkParentId_label_after__</label></p>
     <p><label><input id="context_groupTabs"
