Add extra description about drag and drop actions #2129

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -384,6 +384,7 @@
     <h1>__MSG_config_drag_caption__</h1>
     <fieldset>
       <legend>__MSG_config_tabDragBehavior_caption__</legend>
+      <p>__MSG_config_tabDragBehavior_description__</p>
       <p><label>__MSG_config_tabDragBehavior_label__</label>
          <select id="tabDragBehavior">
            <option value="1">__MSG_config_tabDragBehavior_tearoff_tree__</option>
