Add more description about drag and drop #2129

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -34,31 +34,31 @@
       <ul id="style-radiogroup">
         <li><label><input type="radio"
                           name="style" value="plain">
-              <img src="style-plain.png"/>
+              <img src="style-plain.png" alt=""/>
               __MSG_config_style_plain__</label></li>
         <li><label><input type="radio"
                           name="style" value="plain-dark">
-              <img src="style-plain-dark.png"/>
+              <img src="style-plain-dark.png" alt=""/>
               __MSG_config_style_plain_dark__</label></li>
         <li><label><input type="radio"
                           name="style" value="vertigo">
-              <img src="style-vertigo.png"/>
+              <img src="style-vertigo.png" alt=""/>
               __MSG_config_style_vertigo__</label></li>
         <li><label><input type="radio"
                           name="style" value="mixed">
-              <img src="style-mixed.png"/>
+              <img src="style-mixed.png" alt=""/>
               __MSG_config_style_mixed__</label></li>
         <li><label><input type="radio"
                           name="style" value="metal">
-              <img src="style-metal.png"/>
+              <img src="style-metal.png" alt=""/>
               __MSG_config_style_metal__</label></li>
         <li><label><input type="radio"
                           name="style" value="sidebar">
-              <img src="style-sidebar.png"/>
+              <img src="style-sidebar.png" alt=""/>
               __MSG_config_style_sidebar__</label></li>
         <li><label><input type="radio"
                           name="style" value="highcontrast">
-              <img src="style-highcontrast.png"/>
+              <img src="style-highcontrast.png" alt=""/>
               __MSG_config_style_highcontrast__</label></li>
         <li><label><input type="radio"
                           name="style" value="none">
@@ -401,9 +401,11 @@
          </select></p>
       <p><label><input id="showTabDragHandle"
                        type="checkbox">
+               <img src="tab-drag-handle.png" alt=""/>
                __MSG_config_showTabDragHandle_label__</label></p>
       <p><label><input id="showTabDragBehaviorNotification"
                        type="checkbox">
+               <img src="tab-drag-behavior-notification.png" alt=""/>
                __MSG_config_showTabDragBehaviorNotification_label__</label></p>
     </fieldset>
     <fieldset>
