--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -509,9 +509,10 @@
             <p><label><input id="logFor-common/api-tabs" type="checkbox">common/api-tabs</label></p>
             <p><label><input id="logFor-common/api-tabs-listener" type="checkbox">common/api-tabs-listener</label></p>
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
-            <p><label><input id="logFor-common/cache" type="checkbox">common/cache</label></p>
             <p><label><input id="logFor-common/commands" type="checkbox">common/commands</label></p>
             <p><label><input id="logFor-common/contextual-identities" type="checkbox">common/contextual-identities</label></p>
+            <p><label><input id="logFor-common/dom-cache" type="checkbox">common/dom-cache</label></p>
+            <p><label><input id="logFor-common/json-cache" type="checkbox">common/json-cache</label></p>
             <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
             <p><label><input id="logFor-common/sidebar-status" type="checkbox">common/sidebar-status</label></p>
