Put DOM cache module under sidebar/

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -511,7 +511,6 @@
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
             <p><label><input id="logFor-common/commands" type="checkbox">common/commands</label></p>
             <p><label><input id="logFor-common/contextual-identities" type="checkbox">common/contextual-identities</label></p>
-            <p><label><input id="logFor-common/dom-cache" type="checkbox">common/dom-cache</label></p>
             <p><label><input id="logFor-common/json-cache" type="checkbox">common/json-cache</label></p>
             <p><label><input id="logFor-common/migration" type="checkbox">common/migration</label></p>
             <p><label><input id="logFor-common/permissions" type="checkbox">common/permissions</label></p>
@@ -548,6 +547,7 @@
           <legend><label><input id="logFor-sidebar" type="checkbox">__MSG_config_logFor_sidebar__</label></legend>
             <p><label><input id="logFor-sidebar/collapse-expand" type="checkbox">sidebar/collapse-expand</label></p>
             <p><label><input id="logFor-sidebar/color" type="checkbox">sidebar/color</label></p>
+            <p><label><input id="logFor-sidebar/dom-cache" type="checkbox">sidebar/dom-cache</label></p>
             <p><label><input id="logFor-sidebar/drag-and-drop" type="checkbox">sidebar/drag-and-drop</label></p>
             <p><label><input id="logFor-sidebar/event-utils" type="checkbox">sidebar/event-utils</label></p>
             <p><label><input id="logFor-sidebar/indent" type="checkbox">sidebar/indent</label></p>
