Move more features from common/tabs to the Tab class

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -506,6 +506,8 @@
         <p><!-- git grep configs.logFor | grep -v common.js | cut -d "'" -f 2 | sed -r -e 's;^(.+)$;            <p><label><input id="logFor-\1" type="checkbox">\1</label></p>;' -->
         <fieldset>
           <legend><label><input id="logFor-common" type="checkbox">__MSG_config_logFor_common__</label></legend>
+            <p><label><input id="logFor-common/Tab" type="checkbox">common/Tab</label></p>
+            <p><label><input id="logFor-common/Window" type="checkbox">common/Window</label></p>
             <p><label><input id="logFor-common/api-tabs" type="checkbox">common/api-tabs</label></p>
             <p><label><input id="logFor-common/api-tabs-listener" type="checkbox">common/api-tabs-listener</label></p>
             <p><label><input id="logFor-common/bookmarks" type="checkbox">common/bookmarks</label></p>
@@ -523,6 +525,7 @@
             <p><label><input id="logFor-common/tabs" type="checkbox">common/tabs</label></p>
             <p><label><input id="logFor-common/tree" type="checkbox">common/tree</label></p>
             <p><label><input id="logFor-common/tst-api" type="checkbox">common/tst-api</label></p>
+            <p><label><input id="logFor-common/unique-id" type="checkbox">common/unique-id</label></p>
             <p><label><input id="logFor-common/user-operation-blocker" type="checkbox">common/user-operation-blocker</label></p>
         </fieldset>
         <fieldset>
