--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -565,6 +565,9 @@
             <p><label><input id="logFor-sidebar/tab-drag-handle" type="checkbox">sidebar/tab-drag-handle</label></p>
         </fieldset>
       </fieldset>
+      <p><label><input id="loggingQueries"
+                       type="checkbox">
+                __MSG_config_loggingQueries_label__</label></p>
       <p><label><input id="simulateSVGContextFill"
                        type="checkbox">
                __MSG_config_simulateSVGContextFill_label__</label></p>
