Add method to output query logs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -567,7 +567,8 @@
       </fieldset>
       <p><label><input id="loggingQueries"
                        type="checkbox">
-                __MSG_config_loggingQueries_label__</label></p>
+                __MSG_config_loggingQueries_label__</label>
+         <button id="showQueryLogsButton">__MSG_config_showQueryLogsButton_label__</button></p>
       <p><label><input id="simulateSVGContextFill"
                        type="checkbox">
                __MSG_config_simulateSVGContextFill_label__</label></p>
