Add configuration UI to change label overflow style #1994

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -92,6 +92,14 @@
                      name="sidebarScrollbarPosition" value="2">
          __MSG_config_sidebarScrollbarPosition_right__</label>
     </p>
+    <p>__MSG_config_labelOverflowStyle_caption__
+       <label><input type="radio"
+                     name="labelOverflowStyle" value="fade">
+         __MSG_config_labelOverflowStyle_fade__</label>
+       <label><input type="radio"
+                     name="labelOverflowStyle" value="crop">
+         __MSG_config_labelOverflowStyle_crop__</label>
+    </p>
     <p><label>__MSG_config_maxTreeLevel_before__
               <input id="maxTreeLevel"
                      type="number"
