Add an option to keep tree structure including hidden tabs

--- a/webextensions/options/options.html
+++ b/webextensions/options/options.html
@@ -388,6 +388,17 @@
               __MSG_config_parentTabBehaviorForChanges_onlyInSidebar__</label></li>
       </ul>
     </fieldset>
+    <fieldset>
+      <legend>__MSG_config_fixupTreeOnTabVisibilityChanged_caption__</legend>
+      <ul>
+        <li><label><input type="radio"
+                          name="fixupTreeOnTabVisibilityChanged" value="true">
+              __MSG_config_fixupTreeOnTabVisibilityChanged_fix__</label></li>
+        <li><label><input type="radio"
+                          name="fixupTreeOnTabVisibilityChanged" value="false">
+              __MSG_config_fixupTreeOnTabVisibilityChanged_keep__</label></li>
+      </ul>
+    </fieldset>
     </section>
 
 
